--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "homepage": "https://github.com/AlreadyBored/basic-js-ds#readme",
   "devDependencies": {
     "chai": "4.3.6",
+    "eslint": "^8.38.0",
     "mocha": "10.0.0",
     "sinon": "14.0.0"
   }
